# SparseDiffEngine

./: CLAUDE.md  CMakeLists.txt  README.md  RELEASE.md  TODO.md  pyproject.toml
.github/workflows/: cmake.yml  release.yml  sanitizer.yml  valgrind.yml
docs/: problem_struct_design.md  vstack-plan.md
include/: affine.h  bivariate.h  bivariate_full_dom.h  elementwise_full_dom.h  elementwise_univariate.h  expr.h  memory_wrappers.h  other.h  problem.h  subexpr.h
include/affine/: linear_op.h  variable.h
include/atoms/: affine.h  bivariate_full_dom.h  bivariate_restricted_dom.h  elementwise_full_dom.h  elementwise_restricted_dom.h  non_elementwise_full_dom.h
include/old-code/: old_CSR.h  old_CSR_sum.h  old_affine.h  old_matrix_BTA.h  old_permuted_dense.h  old_stacked_pd_linalg.h
include/utils/: COO_Matrix.h  COO_matrix.h  CSC_Matrix.h  CSC_matrix.h  CSR_Matrix.h  CSR_matrix.h  CSR_sum.h  JMatrix.h  Timer.h  Vec_macros.h  blas_compat.h  cblas_wrapper.h  dense_matrix.h  iVec.h  int_double_pair.h  linalg.h  linalg_dense_sparse_matmuls.h  linalg_sparse_matmuls.h  matmul_dispatchers.h  matrix.h  matrix_BTA.h  matrix_sum.h  mini_numpy.h  permuted_dense.h  permuted_dense_linalg.h  sparse_matrix.h  stacked_pd.h  stacked_pd_kron_linalg.h  stacked_pd_linalg.h  tracked_alloc.h  utils.h
python/: bindings.c  convert.py  test_inverse_data.py
python/atoms/: index.h  linear.h  prod_axis_one.h  quad_over_lin.h  trace.h
python/tests/: test_constrained.py  (+3 more)
src/: expr.c  problem.c
tests/: all_tests.c  minunit.h  numerical_diff.c  numerical_diff.h  test_helpers.c  test_helpers.h
(+354 files in other folders)
